fix: fixed shopping bag overflowing from window.

--- a/src/assets/styles/shopping-bag.css
+++ b/src/assets/styles/shopping-bag.css
@@ -1,8 +1,7 @@
 .shopping-bag-container {
     position: absolute;
-    margin-top: 65px;
-    left: 72%;
-    max-width: 1600px;
+    margin-top: 50px;
+    right: -1.1%;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -10,7 +9,7 @@
     color: white;
     width: 400px;
     border-radius: 10px;
-    padding: 15px;
+    padding: 20px;
     top: 0;
     z-index: 1;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -60,7 +59,7 @@
 
 .delete-icon {
     position: relative;
-    left: 60px;
+    left: 53px;
     bottom: 8px;
     width: 20px;
     height: 20px;
